# convergio-depgraph

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
.github/workflows/: ci.yml
crates/convergio-depgraph/: Cargo.toml
crates/convergio-depgraph/src/: ext.rs  graph.rs  graph_tests.rs  lib.rs  mcp_defs.rs  openapi.rs  removal.rs  routes.rs  semver_check.rs
docs/adr/: 001-extraction.md
