[workspace]
resolver = "2"
members = ["crates/convergio-depgraph"]

[workspace.package]
version = "0.1.7"
edition = "2021"
license = "MIT"
repository = "https://github.com/Roberdan/convergio-depgraph"

[workspace.dependencies]
# SDK dependencies (crates.io)
convergio-types = "0.1.10"

# Common deps — pin same versions as SDK for compatibility
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util"] }
tracing = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }
