[package]
name = "convergio-depgraph"
description = "Dependency graph validation, OpenAPI generation, capability listing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
semver = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
